--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 .mt50 {
   margin-top: 50px;
 }
-
+.mb50{margin-bottom:50px !important;}
 .p50 {
   padding: 50px;
 }
@@ -25,11 +25,10 @@
 .mt40 {
   margin-top: 40px;
 }
-
 .mr40 {
   margin-right: 40px;
 }
-
+.font-20{font-size: 20px;}
 .levitate {
   margin-top: -150px;
   margin-right: 75px;
@@ -73,7 +72,22 @@ img.logo-img {
   color: #9E9EB6 !important;
   margin-top: 20px !important;
 }
-
+.subtitle a{
+  color: #fff;
+}
+.button:active, .button.is-active {
+  border-color: #4a4a4a;
+  color: #363636;
+  background-color: #29a976;
+}
+.button:hover, .button.is-hovered {
+  border-color: transparent;
+  color: #ffffff;
+  background-color: #29a976;
+}
+.button.is-info:hover, .button.is-info.is-hovered {
+  background-color: #585ff6;
+}
 .button.is-success.is-outlined {
   background-color: transparent;
   border-color: rgba(40, 204, 139, .24);
@@ -149,6 +163,7 @@ img.logo-img {
   color: #585FF6;
   font-weight: 500;
   margin-bottom: 15px;
+  margin-top: 20px;
 }
 
 .process .title {
@@ -243,7 +258,7 @@ img.logo-img {
   background-image: url(../images/testimonial.png);
   background-repeat: no-repeat;
   width: 100%;
-  height: 680px;
+  height: 510px;
 }
 
 .testimonial-item {
@@ -295,8 +310,8 @@ img.logo-img {
 
 .query-box p {
   font-size: 16px;
-  color: #28CC8B;
-
+  color: #fff;
+  margin-bottom: 10px;
 }
 
 .query-box .title {
@@ -424,4 +439,7 @@ animation-direction: alternate;
 }
 .is-white-text{
 color:#fff !important;
+}
+img.h-52 {
+  height: 52px !important; 
 }
